--- a/_Binary/imgui.ini
+++ b/_Binary/imgui.ini
@@ -220,12 +220,12 @@ Collapsed=0
 
 [Ex01A - About]
 Pos=1,1
-Size=340,60
+Size=323,165
 Collapsed=0
 
 [Ex01As_Demo - About]
 Pos=1,1
-Size=340,60
+Size=323,165
 Collapsed=0
 
 [Ex01B - About]
@@ -260,7 +260,7 @@ Collapsed=0
 
 [Ex02_As_Demo - About]
 Pos=1,1
-Size=340,60
+Size=316,190
 Collapsed=0
 
 [Ex02_B - About]
@@ -762,4 +762,19 @@ Collapsed=0
 Pos=1,40
 Size=315,91
 Collapsed=1
+
+[E04 - Circle Creation_d - About]
+Pos=1,1
+Size=323,165
+Collapsed=0
+
+[A02 - 3D Primitives_d - About]
+Pos=752,-90
+Size=323,284
+Collapsed=0
+
+[E05_Transformations_d - About]
+Pos=1,1
+Size=323,165
+Collapsed=0
 
