--- a/_Binary/imgui.ini
+++ b/_Binary/imgui.ini
@@ -740,7 +740,7 @@ Collapsed=0
 
 [E07 - Gimbal Removal - About]
 Pos=1,1
-Size=340,60
+Size=323,165
 Collapsed=0
 
 [E08 - Projections - About]
@@ -781,5 +781,10 @@ Collapsed=0
 [E05s - Transformations - About]
 Pos=1,1
 Size=340,60
+Collapsed=0
+
+[E07 - Gimbal Removal_d - About]
+Pos=1,1
+Size=323,165
 Collapsed=0
 
