--- a/_Binary/imgui.ini
+++ b/_Binary/imgui.ini
@@ -788,3 +788,13 @@ Pos=1,1
 Size=323,165
 Collapsed=0
 
+[C15_ProjectionsAndCamera_d - About]
+Pos=1,1
+Size=323,165
+Collapsed=0
+
+[E08 - Projections_d - About]
+Pos=1,1
+Size=323,288
+Collapsed=0
+
