--- a/_Binary/imgui.ini
+++ b/_Binary/imgui.ini
@@ -715,7 +715,7 @@ Collapsed=0
 
 [A03 - Camera - About]
 Pos=1,1
-Size=340,60
+Size=323,114
 Collapsed=0
 
 [A04 - SAT - About]
@@ -796,5 +796,15 @@ Collapsed=0
 [E08 - Projections_d - About]
 Pos=1,1
 Size=323,288
+Collapsed=0
+
+[A03 - Camera_d - About]
+Pos=1,1
+Size=323,114
+Collapsed=0
+
+[C17_RigidBodyPt0_d - About]
+Pos=1,1
+Size=323,275
 Collapsed=0
 
