--- a/_Binary/imgui.ini
+++ b/_Binary/imgui.ini
@@ -813,3 +813,13 @@ Pos=1,1
 Size=323,114
 Collapsed=0
 
+[E09 - ARBB_d - About]
+Pos=1,1
+Size=323,254
+Collapsed=0
+
+[E09s - ARBB - About]
+Pos=1,1
+Size=323,254
+Collapsed=0
+
