--- a/_Binary/imgui.ini
+++ b/_Binary/imgui.ini
@@ -823,3 +823,18 @@ Pos=1,1
 Size=323,254
 Collapsed=0
 
+[C18_SAT(outcome)_d - About]
+Pos=1,1
+Size=340,60
+Collapsed=0
+
+[A04 - SAT_d - About]
+Pos=1,1
+Size=323,275
+Collapsed=0
+
+[A04s - SAT - About]
+Pos=1,1
+Size=323,275
+Collapsed=0
+
