--- a/_Binary/imgui.ini
+++ b/_Binary/imgui.ini
@@ -725,7 +725,7 @@ Collapsed=0
 
 [A05 - Octree - About]
 Pos=1,1
-Size=340,60
+Size=316,317
 Collapsed=0
 
 [E04 - Circle Creation - About]
@@ -836,5 +836,20 @@ Collapsed=0
 [A04s - SAT - About]
 Pos=1,1
 Size=323,275
+Collapsed=0
+
+[C19_Entity_d - About]
+Pos=1,1
+Size=315,42
+Collapsed=0
+
+[A05 - Octree_d - About]
+Pos=1,1
+Size=316,300
+Collapsed=0
+
+[A05s - Octree - About]
+Pos=1,1
+Size=316,317
 Collapsed=0
 
